--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <header></header>
+  <nav>
+    <%= link_to "Home", root_path, class: "nav-link" %>
+    <%= link_to "Contact", contact_path, class: "nav-link" %>
+    <%= link_to "About", about_path, class: "nav-link" %>
+  </nav>
+  <section class="content">
+    <%= yield %>
+  </section>
+  <footer> &copy; (2013-2014) NumBeers</footer>
 </body>
 </html>
