--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,27 @@
     <%= link_to "Home", root_path, class: "nav-link" %>
     <%= link_to "Contact", contact_path, class: "nav-link" %>
     <%= link_to "About", about_path, class: "nav-link" %>
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>.
+      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'nav-link' %> |
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'nav-link'  %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link'  %> |
+      <%= link_to "Login", new_user_session_path, :class => 'nav-link'  %>
+    <% end %>
   </nav>
+  
+  <% if notice %>
+    <p class="alert alert-notice"><%= notice %></p>
+  <% end %>
+  <% if alert %>
+    <p class="alert alert-error"><%= alert %></p>
+  <% end %>
+  
   <section class="content">
     <%= yield %>
   </section>
+  
   <footer> &copy; (2013-2014) NumBeers</footer>
 </body>
 </html>
