Created the pages, and restricted users / admins to correct pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,3 @@
 <h1>NumBeers</h1>
+<p>Sign Up in order to particpate in the Office Keg. Your account will be billed once the keg is kicked!</p>
+<h2>Currently on Tap: </h2>
