--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,31 +6,41 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="container">
   <header></header>
   <nav>
     <%= link_to "Home", root_path, class: "nav-link" %>
-    <%= link_to "Contact", contact_path, class: "nav-link" %>
-    <%= link_to "About", about_path, class: "nav-link" %>
-    <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'nav-link' %> |
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'nav-link'  %>
-    <% else %>
-      <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link'  %> |
-      <%= link_to "Login", new_user_session_path, :class => 'nav-link'  %>
+    <%= link_to "Pour", pour_path, class: "nav-link" %>
+    <% if user_signed_in? or admin? %>
+    <%= link_to "Stats", stats_path, class: "nav-link" %>
     <% end %>
+    <% if admin? %>
+    <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
+    <% end %>
+    
+    <div class="nav-right">
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>
+      <%= link_to 'Edit profile', edit_user_registration_path, :class => "nav-link" %>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => "nav-link"  %>
+    <% else %>    
+      <%= link_to "Sign up", new_user_registration_path, :class => "nav-link"  %>
+      <%= link_to "Login", new_user_session_path, :class => "nav-link"  %>      
+    <% end %>
+    </div>
   </nav>
-  
-  <% if notice %>
-    <p class="alert alert-notice"><%= notice %></p>
-  <% end %>
-  <% if alert %>
-    <p class="alert alert-error"><%= alert %></p>
-  <% end %>
   
   <section class="content">
     <%= yield %>
+  </section>
+  
+  <section class="messages">
+    <% if notice %>
+      <p class="alert alert-notice"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-error"><%= alert %></p>
+    <% end %>
   </section>
   
   <footer> &copy; (2013-2014) NumBeers</footer>
