added some basic validation tests, removed old pages

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -32,8 +32,10 @@ nav {
 }
 /*  Content Styling */
 .content {
+ padding: 5px;
  background:white;
 }
+/* Message Styling */
 .messages{
   color: orange;
   font: 18px;
