--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,10 @@
     <% end %>
   </section>
   
+  <section class="info">
+        <%= link_to "About", about_path, class: "info-link" %>
+        <%= link_to "Contact", contact_path, class: "info-link" %>
+  </section>
   <footer> &copy; (2013-2014) NumBeers</footer>
 </body>
 </html>
