Started mailer for contact page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -7,13 +7,8 @@
     <%= form_tag do %>
 
       <div class="field">
-        <%= label_tag :first_name, "First Name" %><br>
-        <%= text_field_tag :first_name %>
-      </div>
-
-      <div class="field">
-        <%= label_tag :last_name, "Last Name" %><br>
-        <%= text_field_tag :last_name %>
+        <%= label_tag :name, "Name" %><br>
+        <%= text_field_tag :name %>
       </div>
 
       <div class="field">
