--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <div class="nav-right">
     <% if user_signed_in? %>
       Logged in as <strong><%= current_user.email %></strong>
-      <%= link_to 'Edit profile', edit_user_registration_path, :class => "nav-link" %>
+      <%= link_to 'Edit profile', edit_user_registration_path, :class => "nav-link" %>s
       <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => "nav-link"  %>
     <% else %>    
       <%= link_to "Sign up", new_user_registration_path, :class => "nav-link"  %>
@@ -47,6 +47,7 @@
         <%= link_to "About", about_path, class: "info-link" %>
         <%= link_to "Contact", contact_path, class: "info-link" %>
   </section>
+  
   <footer> &copy; (2013-2014) NumBeers</footer>
 </body>
 </html>
