alittle messy, but redid how users and contacts will interact

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -55,10 +55,7 @@ nav {
   font: 12px Sans-serif;
   
   &:hover {
-    background:white;
-  }
-  &:visited {
-    color: black;
+    background:#ccc;
   }
 }
 /*  Footer Styling */
