--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,11 +19,25 @@
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></div>
 
+  <div><br/></div>
+
+  <!-- CONTACT -->
+  <div class="disable_input"><%= f.label :unique_id %><br />
+    <%= number_field_tag "contact[unique_id]" ,@contact.unique_id %></div>
+
+  <div><%= f.label :first_name %><br />
+    <%=text_field_tag "contact[first_name]" ,@contact.first_name %></div>
+  
+  <div><%= f.label :last_name %><br />
+    <%=text_field_tag "contact[last_name]" ,@contact.last_name %></div>
+
+  <div><%= f.label :phone_number %><br />
+    <%=text_field_tag "contact[phone_number]" ,@contact.phone_number %></div>
+
+  <div><br/></div>
+
   <div><%= f.submit "Update" %></div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
-
-<%= link_to "Back", :back %>
+<h3>Cancel my account: </h3>
+<%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>
