--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,6 +3,7 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+  <!-- DEVISE -->
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
@@ -12,7 +13,19 @@
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
+  <div><br/></div>
+
+  <!-- CONTACT -->
+  <div><%= f.label :first_name %><br />
+    <%=text_field_tag "contact[first_name]" ,@contact.first_name %></div>
+  
+  <div><%= f.label :last_name %><br />
+    <%=text_field_tag "contact[last_name]" ,@contact.last_name %></div>
+
+  <div><%= f.label :phone_number %><br />
+    <%=text_field_tag "contact[phone_number]" ,@contact.phone_number %></div>
+
+  <div><br/></div>
+  
   <div><%= f.submit "Sign up" %></div>
 <% end %>
-
-<%= render "devise/shared/links" %>
