--- a/app/views/pages/pour.html.erb
+++ b/app/views/pages/pour.html.erb
@@ -1,2 +1,9 @@
 <h1>Pour a Beer</h1>
-<p>Enter your user-id in, click 'Pour'. If valid, then pour a beer.</p>
+<p>Enter in your NumBeer-id and click 'Pour'. If the ID is valid, then you will be allowed to pour a beer.</p>
+
+<%= form_tag("/pour", method: "post") do %>
+  <div><%= label_tag(:numbeer_id, "NumBeer-ID :") %></div>
+<div><%= password_field_tag(:numbeer_id) %></div>
+  <div><br/></div>
+  <div><%= submit_tag("Pour") %></div>
+<% end %>
