--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
     <%=text_field_tag "contact[last_name]" ,@contact.last_name %></div>
 
   <div><%= f.label :phone_number %><br />
-    <%=telephone_field "contact[phone_number]" ,@contact.phone_number %></div>
+    <%=text_field_tag "contact[phone_number]" ,@contact.phone_number %></div>
 
   <div><br/></div>
   
