--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,7 @@
 <h1>About NumBeers</h1>
-<h2>Developed By:</h2>
+<p>NumBeers was created to help solve the problem of managing the Office Keg. It tracks the number of pours taken from the keg currently on tap. Previously, it was a very manual process. Each person would or would not enter their extension when pouring a pint. Once the keg was finished, users were matched with their extensions, totals were caluclated, price per pour calculated, and then a bill was generated.</p>
+
+<h2>Maintained By:</h2>
 <ul>
   <li>Mark Dabrowski</li>
 </ul>
