--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,5 @@
 <h1>Contact</h1>
+<p>If you have any ideas or comments that you would like to share with us, let us know:</p>
 <% if @success %>
   Thank you for contacting us!
 <% else %>
