--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,2 +1,12 @@
 <h1>NumBeers Dashboard</h1>
 <p>Welcome NumBeer Admin! Do what you need to do.</p>
+
+<div><%= link_to 'Manage Beers', beers_path %></div>
+
+<h2>Manage Kegs</h2>
+
+<h2>Manage Bills</h2>
+
+<h2>Manage Users</h2>
+  
+  
