added tests to registrations controller

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,2 @@
 <h1>NumBeers</h1>
-<p>Sign Up in order to particpate in the Office Keg. Your account will be billed once the keg is kicked!</p>
-<h2>Currently on Tap: </h2>
+<p>Sign Up for NumBeers, in order to particpate in drinking beer from the Office Keg. You will be assigned a unique "NumBeer-ID" which you will need to enter before pouring a pint. Once the keg is finished, your account will be billed for the number of pours you had.</p>
