--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -3,7 +3,7 @@
 
 <div><%= link_to 'Manage Beers', beers_path %></div>
 
-<h2>Manage Kegs</h2>
+<div><%= link_to 'Manage Kegs', kegs_path %></div>
 
 <h2>Manage Bills</h2>
 
