--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -69,3 +69,12 @@ footer {
   color:#ccc;
   text-align:center;
 }
+/* Messages Styling */
+.notice {
+  font: 14px;
+}
+.alert {
+ color: red;
+ font: 14px;
+ font-weight: bold;
+}
