--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
   
   <section class="messages">
     <% if notice %>
-      <p class="alert alert-notice"><%= notice %></p>
+      <p class="notice alert-notice"><%= notice %></p>
     <% end %>
     <% if alert %>
       <p class="alert alert-error"><%= alert %></p>
