--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,8 +5,6 @@
 
 <div><%= link_to 'Manage Kegs', kegs_path %></div>
 
-<h2>Manage Bills</h2>
-
-<h2>Manage Users</h2>
+<div><%= link_to 'Manage Transactions', transactions_path %></div>
   
   
