--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,7 +31,7 @@
     <%=text_field_tag "contact[last_name]" ,@contact.last_name %></div>
 
   <div><%= f.label :phone_number %><br />
-    <%=telephone_field "contact[phone_number]" ,@contact.phone_number %></div>
+    <%=telephone_field_tag "contact[phone_number]" ,@contact.phone_number %></div>
 
   <div><br/></div>
 
