--- a/app/views/pages/pour.html.erb
+++ b/app/views/pages/pour.html.erb
@@ -8,7 +8,7 @@
   <h3><%= @keg.beer.name %> (<%= @keg.beer.style %>)</h3>  
 </div>
 
-<%= form_tag("/pour", method: "post") do %>
+<%= form_tag("/pour", method: "post", :honeypot => true ) do %>
   <div><%= label_tag(:numbeer_id, "NumBeer-ID :") %></div>
   <div><%= password_field_tag(:numbeer_id) %></div>
   <div><br/></div>
