added donations / payments with bitcoin QR

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,3 +5,9 @@
 <ul>
   <li>Mark Dabrowski</li>
 </ul>
+
+<h2>Donations / Payments:</h2>
+<p>Bitcoin Address: 15Ao35cjEZjnwG65v8Jnnmm8wzJ2W391cr</p>
+<%= image_tag "15Ao35cjEZjnwG65v8Jnnmm8wzJ2W391cr.png" %>
+
+
