added an admin mailer, specifically in the conact page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,7 @@
   <li>Mark Dabrowski</li>
 </ul>
 
-<h2>Donations / Payments:</h2>
+<h2>Donations:</h2>
 <p>Bitcoin Address: 15Ao35cjEZjnwG65v8Jnnmm8wzJ2W391cr</p>
 <%= image_tag "15Ao35cjEZjnwG65v8Jnnmm8wzJ2W391cr.png" %>
 
