--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Edit Profile:</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -22,8 +22,8 @@
   <div><br/></div>
 
   <!-- CONTACT -->
-  <div>NumBeer-ID : <%= f.label @contact.numbeer_id %></div>
-
+<div><b>NumBeer-ID : <%= f.label @contact.numbeer_id %></b></div>
+  <br>
   <div><%= f.label :first_name %><br />
     <%=text_field_tag "contact[first_name]" ,@contact.first_name %></div>
   
@@ -32,11 +32,15 @@
 
   <div><%= f.label :phone_number %><br />
     <%=telephone_field_tag "contact[phone_number]" ,@contact.phone_number %></div>
+  <br>
+  <p><b>Get Email Notifications About:</b></p>
+  <div><%= f.label :happy_hour, "Happy Hour: " %>
+    <%= check_box_tag "contact[happy_hour]" ,@contact.happy_hour %></div>
 
   <div><br/></div>
 
   <div><%= f.submit "Update" %></div>
 <% end %>
 <hr>
-<h3>Cancel my account: </h3>
+<h3>Cancel My Account: </h3>
 <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>
