--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,26 @@
-<h2>Sign up</h2>
-
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <!-- DEVISE -->
-  <div><%= f.label :email %><br />
+  <div><%= f.label :email %>
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :password %><br />
+  <div><%= f.label :password %>
   <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div><%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %></div>
 
   <div><br/></div>
 
   <!-- CONTACT -->
-  <div><%= f.label :first_name %><br />
+  <div><%= f.label :first_name %>
     <%=text_field_tag "contact[first_name]" ,@contact.first_name %></div>
   
-  <div><%= f.label :last_name %><br />
+  <div><%= f.label :last_name %>
     <%=text_field_tag "contact[last_name]" ,@contact.last_name %></div>
 
-  <div><%= f.label :phone_number %><br />
+  <div><%= f.label :phone_number %>
     <%=telephone_field_tag "contact[phone_number]" ,@contact.phone_number %></div>
 
   <div><br/></div>
