--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -18,7 +18,7 @@
 </div>
 <hr>
 <div id="User_Stats">
-  <h1>My Stats</h1>
+  <h1>Personal Stats</h1>
   <div>
     <h2>Total Pours</h2>
     <%= user_total_pours(current_user) %>
