--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>NumBeers</h1>
-<p>Sign Up for NumBeers, in order to particpate in drinking beer from the Office Keg. You will be assigned a unique "NumBeer-ID" which you will need to enter before pouring a pint. Once the keg is finished, your account will be billed for the number of pours you had.</p>
+<div class="text-center">
+<p>Sign Up for NumBeers in order to particpate in drinking beer from the Office Keg. You will be assigned a unique "NumBeer-ID" which you will need to enter before pouring a pint. Once the keg is finished, your account will be billed for the number of pours you had.</p>
+</div>
