--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,19 +1,11 @@
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<h2>Sign Up</h2>
+<%= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <!-- DEVISE -->
-  <div><%= f.label :email %>
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.label :password %>
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><br/></div>
-
-  <!-- CONTACT -->
+  <%= f.email_field :email, :autofocus => true %>
+  <%= f.password_field :password %>
+  <%= f.password_field :password_confirmation %>
+  
   <div><%= f.label :first_name %>
     <%=text_field_tag "contact[first_name]" ,@contact.first_name %></div>
   
@@ -23,7 +15,5 @@
   <div><%= f.label :phone_number %>
     <%=telephone_field_tag "contact[phone_number]" ,@contact.phone_number %></div>
 
-  <div><br/></div>
-  
-  <div><%= f.submit "Sign up" %></div>
+  <%= f.submit "Sign up", :class => "btn btn-primary btn-large"%>
 <% end %>
