--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,14 @@
-<h1>About NumBeers</h1>
+<h2>About NumBeers</h2>
 <p>NumBeers was created to help solve the problem of managing the Office Keg. It tracks the number of pours taken from the keg currently on tap. Previously, it was a very manual process. Each person would or would not enter their extension when pouring a pint. Once the keg was finished, users were matched with their extensions, totals were caluclated, price per pour calculated, and then a bill was generated.</p>
-
-<h2>Maintained By:</h2>
+<p>If you would like to contribute to the NumBeers project checkout:</br>
+  <a href="https://github.com/mdabski/numbeers">GitHub NumBeers</a>
+</p>
+<h3>Maintained By:</h3>
 <ul>
   <li>Mark Dabrowski</li>
 </ul>
 
-<h2>Donations:</h2>
+<h3>Donations:</h3>
 <p>Bitcoin Address: 15Ao35cjEZjnwG65v8Jnnmm8wzJ2W391cr</p>
 <%= image_tag "15Ao35cjEZjnwG65v8Jnnmm8wzJ2W391cr.png" %>
 
