--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,20 @@
-<div class="text-center">
-<p>Sign Up for NumBeers in order to particpate in drinking beer from the Office Keg. You will be assigned a unique "NumBeer-ID" which you will need to enter before pouring a pint. Once the keg is finished, your account will be billed for the number of pours you had.</p>
+<div>
+  <p>Sign Up for NumBeers in order to particpate in drinking beer from the Office Keg. You will be assigned a unique "NumBeer-ID" which you will need to enter before pouring a pint. Once the keg is finished, your account will be billed for the number of pours you had.
+  </p>
 </div>
+
+<div>
+  <h4>Features of NumBeers</h4>
+  <ul>
+    <li>Drink from the Office Keg... what else do you need to know!?</li>
+    <li>Subscribe to Happy Hour notices</li>
+    <li>Check-out general user / personal statistics</li>
+  </ul>
+  <h4>Upcoming Features</h4>
+  <ul>
+    <li>User Payment Rating (Gets you a FREE Pour)</li>
+    <li>Vote on the next Keg</li>
+    <li>Accept payment online</li>
+  </ul>
+</div>
+  
