--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,12 +46,14 @@
     <% end %>
   </section>
   
-  <section class="info">
-        <%= link_to "About", about_path, class: "info-link" %>
-        <%= link_to "Contact", contact_path, class: "info-link" %>
-  </section>
-  
-  <footer> &copy; (2013-2014) NumBeers</footer>
+  <footer class="navbar-fixed-bottom">
+    <div class="info">
+      <%= link_to "About", about_path, class: "info-link" %>
+      <%= link_to "Contact", contact_path, class: "info-link" %>
+    </div>
+    <div class="cpyrght"> &copy; (2013-2014) NumBeers </div>
+  </footer>
+    
   </div>
 </body>
 </html>
