--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,5 +16,6 @@
     <li>Vote on the next Keg</li>
     <li>Accept payment online</li>
   </ul>
+  <p>If you have any feature ideas / comments be sure to let us know through here:<%= link_to "Contact Us", contact_path, class: "info-link" %></p>
 </div>
   
