styling to dashboard

--- a/app/assets/stylesheets/pages.stats.css.scss
+++ b/app/assets/stylesheets/pages.stats.css.scss
@@ -5,6 +5,7 @@
     font-size: 18px;
     padding: 10px 0px;
     border-radius: 10px 10px 0 0;
+    line-height: 8px;
   }
   .stat_val{
     background: #EEEEEE;
