--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,24 +1,27 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Beer -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Brewer:</strong>
-  <%= @beer.brewer %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:brewer) %>:</strong></dt>
+  <dd><%= @beer.brewer %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @beer.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:style) %>:</strong></dt>
+  <dd><%= @beer.style %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:url) %>:</strong></dt>
+  <dd><%= @beer.url %></dd>
+</dl>
 
-<p>
-  <strong>Name:</strong>
-  <%= @beer.name %>
-</p>
-
-<p>
-  <strong>Style:</strong>
-  <%= @beer.style %>
-</p>
-
-<p>
-  <strong>Url:</strong>
-  <%= @beer.url %>
-</p>
-
-<%= link_to 'Edit', edit_beer_path(@beer) %> |
-<%= link_to 'Back', beers_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              beers_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_beer_path(@beer), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              beer_path(@beer),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
