--- a/app/views/kegs/index.html.erb
+++ b/app/views/kegs/index.html.erb
@@ -1,35 +1,44 @@
-<h1>Listing kegs</h1>
-
-<table>
+<%- model_class = Keg -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Size</th>
-      <th>Price</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Beer</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:size) %></th>
+      <th><%= model_class.human_attribute_name(:price) %></th>
+      <th><%= model_class.human_attribute_name(:start_date) %></th>
+      <th><%= model_class.human_attribute_name(:end_date) %></th>
+      <th><%= model_class.human_attribute_name(:beer_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @kegs.each do |keg| %>
       <tr>
+        <td><%= link_to keg.id, keg_path(keg) %></td>
         <td><%= keg.size %></td>
         <td><%= keg.price %></td>
         <td><%= keg.start_date %></td>
         <td><%= keg.end_date %></td>
-        <td><%= keg.beer.name %></td>
-        <td><%= link_to 'Show', keg %></td>
-        <td><%= link_to 'Edit', edit_keg_path(keg) %></td>
-        <td><%= link_to 'Destroy', keg, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= keg.beer_id %></td>
+        <td><%=l keg.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_keg_path(keg), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      keg_path(keg),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Keg', new_keg_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_keg_path,
+            :class => 'btn btn-primary' %>
