--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,31 +1,20 @@
-<%= form_for(@transaction) do |f| %>
-  <% if @transaction.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
-
-      <ul>
-      <% @transaction.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @transaction, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :keg_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :keg_id, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :contact_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :contact_id, :class => 'text_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :keg_id %><br>
-    <!--<%= f.text_field :keg_id %>-->
-    <%= f.collection_select(:keg_id, Keg.all, :id, :start_date) %>
-  </div>
-  <div class="field">
-    <%= f.label :contact_id %><br>
-    <!-- <%= f.text_field :contact_id %>-->
-    <%= f.collection_select(:contact_id, Contact.all, :id, :full_name) %>
-  </div>
-  <div class="field">
-    <%= f.label :created_at %><br>
-    <%= f.datetime_select :created_at, :ampm => true %> %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                transactions_path, :class => 'btn' %>
   </div>
 <% end %>
