--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,31 +1,38 @@
-<h1>Listing transactions</h1>
-
-<table>
+<%- model_class = Transaction -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Keg</th>
-      <th>Contact</th>
-      <th>Timestamp</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:keg_id) %></th>
+      <th><%= model_class.human_attribute_name(:contact_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @transactions.each do |transaction| %>
       <tr>
-        <td><%= transaction.keg.beer.name %></td>
-        <td><%= transaction.contact.full_name %></td>
-        <td><%= transaction.created_at.strftime("%a, %b %d %Y, %I:%M %p") %></td>
-        <td><%= link_to 'Show', transaction %></td>
-        <td><%= link_to 'Edit', edit_transaction_path(transaction) %></td>
-        <td><%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to transaction.id, transaction_path(transaction) %></td>
+        <td><%= transaction.keg_id %></td>
+        <td><%= transaction.contact_id %></td>
+        <td><%=l transaction.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_transaction_path(transaction), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      transaction_path(transaction),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Transaction', new_transaction_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_transaction_path,
+            :class => 'btn btn-primary' %>
