--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,19 +1,23 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Transaction -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Keg:</strong>
-  <%= @transaction.keg.beer.name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:keg_id) %>:</strong></dt>
+  <dd><%= @transaction.keg_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:contact_id) %>:</strong></dt>
+  <dd><%= @transaction.contact_id %></dd>
+</dl>
 
-<p>
-  <strong>Contact:</strong>
-  <%= @transaction.contact.full_name %>
-</p>
-
-<p>
-  <strong>Timestamp:</strong>
-  <%= @transaction.created_at.strftime("%a, %b %d %Y, %I:%M %p") %>
-</p>
-
-<%= link_to 'Edit', edit_transaction_path(@transaction) %> |
-<%= link_to 'Back', transactions_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              transactions_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_transaction_path(@transaction), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              transaction_path(@transaction),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
