--- a/app/views/kegs/_form.html.erb
+++ b/app/views/kegs/_form.html.erb
@@ -14,19 +14,19 @@
   <div class="control-group">
     <%= f.label :start_date, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :start_date, :class => 'text_field' %>
+      <%= f.date_select :start_date, :class => 'date_select' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :end_date, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :end_date, :class => 'text_field' %>
+      <%= f.date_select :end_date, :include_blank => true, :class => 'date_select' %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :beer_id, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :beer_id, :class => 'text_field' %>
+      <%= f.collection_select(:beer_id, Beer.all, :id, :name) %>
     </div>
   </div>
 
