--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -2,13 +2,13 @@
   <div class="control-group">
     <%= f.label :keg_id, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :keg_id, :class => 'text_field' %>
+      <%= f.collection_select(:keg_id, Beer.all, :id, :name) %>
     </div>
   </div>
   <div class="control-group">
     <%= f.label :contact_id, :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :contact_id, :class => 'text_field' %>
+      <%= f.collection_select(:contact_id, Contact.all, :id, :full_name) %>
     </div>
   </div>
 
