--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -5,9 +5,9 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:keg_id) %>:</strong></dt>
-  <dd><%= @transaction.keg_id %></dd>
+  <dd><%= @transaction.keg.beer.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:contact_id) %>:</strong></dt>
-  <dd><%= @transaction.contact_id %></dd>
+  <dd><%= @transaction.contact.full_name %></dd>
 </dl>
 
 <div class="form-actions">
