add a background to footer, and moved the bottom up

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,3 +1,6 @@
+body{
+  padding-bottom: 70px;
+}
 .wrap{
   vertical-align: middle;
 }
@@ -30,6 +33,7 @@ nav {
 /*  Footer Styling */
 footer{
   padding-bottom: 10px;
+  background: white;
 }
 .info{
   text-align: center;
