--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -5,7 +5,7 @@
 <% else %>
   <p>
 
-    <%= form_tag do %>
+    <%= form_tag(:honeypot => true ) do %>
 
       <div class="field">
         <%= label_tag :name, "Name" %>
