added keypad to pour page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,10 +38,10 @@
 
     <section class="messages">
       <% if notice %>
-        <p class="notice alert-notice"><%= notice %></p>
+        <p class="notice msg"><%= notice %></p>
       <% end %>
       <% if alert %>
-        <p class="alert"><%= alert %></p>
+        <p class="alert msg"><%= alert %></p>
       <% end %>
     </section>
   </div>
