--- a/app/views/pages/pour.html.erb
+++ b/app/views/pages/pour.html.erb
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div id="pour" class="text-center">
 <% if @keg.present? %>
   <div id="pour-title">
     <h2>Pour a Beer</h2>
@@ -12,24 +12,20 @@
 
   <%= form_tag("/pour", method: "post", :honeypot => true ) do %>
     <div><%= label_tag(:numbeer_id, "NumBeer-ID :") %></div>
-    <div><%= password_field_tag(:numbeer_id) %></div>
-    <div>
-<!--     <input id="num" name"number" type="text" pattern="[0-9]{6}" onfocus="num('keypad').style.display='inline-block';"/>
-
-    <div id="keypad" class="background:#AAA; vertical-align:top;">
-    <input type="button" value="7" onclick="num('num').value+=7;"/>
-    <input type="button" value="8" onclick="num('num').value+=8;"/>
-    <input type="button" value="9" onclick="num('num').value+=9;"/><br/>
-    <input type="button" value="4" onclick="num('num').value+=4;"/>
-    <input type="button" value="5" onclick="num('num').value+=5;"/>
-    <input type="button" value="6" onclick="num('num').value+=6;"/><br/>
-    <input type="button" value="1" onclick="num('num').value+=1;"/>
-    <input type="button" value="2" onclick="num('num').value+=2;"/>
-    <input type="button" value="3" onclick="num('num').value+=3;"/><br/>
-    <input type="button" value="X" onclick="num('keypad').style.display='none'"/>
-    <input type="button" value="0" onclick="num('num').value+=0;"/>
-    <input type="button" value="&larr;" onclick="num('num').value=num('num').value.substr(0,num('num').value.length-1);"/>
-    </div> -->
+  <div><%= text_field_tag(:numbeer_id) %></div>
+    <div id="keypad" class="keypad vertical-align:top;">
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="7"/>
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="8"/>
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="9"/><br/>
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="4"/>
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="5"/>
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="6"/><br/>
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="1"/>
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="2"/>
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="3"/><br/>
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="DEL"/>
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="0"/>
+      <input type="button" class="keypad-btn btn btn-default btn-large" value="CLR"/>
     </div>
     <div><%= submit_tag "Pour", :class => "btn btn-primary btn-large" %></div>
   <% end %>
@@ -39,10 +35,28 @@
 </div>
   
 <script type="text/javascript" charset="utf-8">
-
-	$(function(){
-		$("input#numbeer_id").focus();
-	});
   
-  function num(id) { return document.getElementById(id); }
+  $(".keypad-btn").click(function(){
+    num($(this));
+    $(".msg").val("");
+  });
+  
+  function num(b){
+    btn_val = b.val()
+    prev_val = $("#numbeer_id").val();
+    
+    switch(btn_val){
+      case "DEL":
+        new_val = prev_val.slice(0,-1)
+        break;
+      case "CLR":
+        new_val = ""
+        break;
+      default:
+        new_val = prev_val + btn_val;
+    }
+    
+    $("#numbeer_id").val(new_val)
+  }
+  
 </script>
