minor changes to about and contact page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <h2>About NumBeers</h2>
 <p>NumBeers was created to help solve the problem of managing the Office Keg. It tracks the number of pours taken from the keg currently on tap. Previously, it was a very manual process. Each person would or would not enter their extension when pouring a pint. Once the keg was finished, users were matched with their extensions, totals were caluclated, price per pour calculated, and then a bill was generated.</p>
-<p>If you would like to contribute to the NumBeers project checkout:</br>
-  <a href="https://github.com/mdabski/numbeers">GitHub NumBeers</a>
+<p>If you would like to contribute to the NumBeers project, you can fork it here:</br>
+  <a href="https://github.com/mdabski/numbeers/fork">GitHub NumBeers</a>
 </p>
 <h3>Maintained By:</h3>
 <ul>
