--- a/app/views/user_mailer/happy_hour.html.erb
+++ b/app/views/user_mailer/happy_hour.html.erb
@@ -2,5 +2,5 @@
   Dear <%= @name %>,
 </p>
 <p>
-  Just thought you should know that someone has decided it was 5'oclock somewhere, and has poured themselves a pint... in case you wanted to join them.
+  Just thought you should know that someone has decided it was 5 O'Clock somewhere, and has poured themselves a pint... in case you wanted to join them.
 </p>
