--- a/app/views/user_mailer/happy_hour.html.erb
+++ b/app/views/user_mailer/happy_hour.html.erb
@@ -1,6 +1,3 @@
 <p>
-  Dear <%= @name %>,
-</p>
-<p>
-  Just thought you should know that someone has decided it was 5 O'Clock somewhere, and has poured themselves a pint... in case you wanted to join them.
+  Just thought you should know that someone has decided it was 5 O'Clock somewhere and therefore has poured themselves a pint... Just saying, in case you wanted to join them.
 </p>
