--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -23,6 +23,7 @@
   </div>
 </div>
 
+<% if user_signed_in? or admin? %>
 <div id="personal_stats" class="row text-center">
   <div class="span12 label label-success"><h2>Personal Stats</h2></div>
   
@@ -47,3 +48,4 @@
     </div>
   </div>
 </div>
+<% end %>
