moved transactions_controller to admin namespace

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,6 +5,6 @@
 
 <div><%= link_to 'Manage Kegs', kegs_path %></div>
 
-<div><%= link_to 'Manage Transactions', transactions_path %></div>
+<div><%= link_to 'Manage Transactions', admin_transactions_path %></div>
   
   
