--- a/app/views/admin/transactions/_form.html.erb
+++ b/app/views/admin/transactions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @transaction, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for [:admin, @transaction], :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :keg_id, :class => 'control-label' %>
     <div class="controls">
@@ -15,6 +15,6 @@
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                transactions_path, :class => 'btn' %>
+    admin_transactions_path, :class => 'btn' %>
   </div>
 <% end %>
