--- a/app/views/admin/transactions/index.html.erb
+++ b/app/views/admin/transactions/index.html.erb
@@ -15,15 +15,15 @@
   <tbody>
     <% @transactions.each do |transaction| %>
       <tr>
-        <td><%= link_to transaction.id, transaction_path(transaction) %></td>
+        <td><%= link_to transaction.id, admin_transaction_path(transaction) %></td>
         <td><%= transaction.keg.beer.name %></td>
         <td><%= transaction.contact.full_name %></td>
         <td><%=l transaction.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_transaction_path(transaction), :class => 'btn btn-mini' %>
+    edit_admin_transaction_path(transaction), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      transaction_path(transaction),
+    admin_transaction_path(transaction),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -34,5 +34,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_transaction_path,
+  new_admin_transaction_path,
             :class => 'btn btn-primary' %>
