--- a/app/views/admin/kegs/_form.html.erb
+++ b/app/views/admin/kegs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @keg, :html => { :class => 'form-horizontal' } do |f| %>
+<%= form_for [:admin, @keg], :html => { :class => 'form-horizontal' } do |f| %>
   <div class="control-group">
     <%= f.label :size, :class => 'control-label' %>
     <div class="controls">
@@ -32,7 +32,6 @@
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                kegs_path, :class => 'btn' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")), admin_kegs_path, :class => 'btn' %>
   </div>
 <% end %>
