--- a/app/views/admin/kegs/index.html.erb
+++ b/app/views/admin/kegs/index.html.erb
@@ -18,7 +18,7 @@
   <tbody>
     <% @kegs.each do |keg| %>
       <tr>
-        <td><%= link_to keg.id, keg_path(keg) %></td>
+        <td><%= link_to keg.id, admin_keg_path(keg) %></td>
         <td><%= keg.size %></td>
         <td><%= keg.price %></td>
         <td><%= keg.start_date %></td>
@@ -27,9 +27,9 @@
         <td><%=l keg.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_keg_path(keg), :class => 'btn btn-mini' %>
+                      edit_admin_keg_path(keg), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      keg_path(keg),
+                      admin_keg_path(keg),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -40,5 +40,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_keg_path,
+            new_admin_keg_path,
             :class => 'btn btn-primary' %>
